objects/OF_CV_Regole_Vendita__c.object
<CustomObject>
    <fields>
        <fullName>Codice_OLO__c</fullName>
        <label>Codice_OLO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_strada_BL_WS__c</fullName>
        <label>Codice_strada_BL_WS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Codice_strada_BL__c</fullName>
        <label>Codice_strada_BL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comune__c</fullName>
        <label>Comune</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_invio__c</fullName>
        <label>Data invio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id_Building_BL_WS__c</fullName>
        <label>Id_Building_BL_WS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id_Building_BL__c</fullName>
        <label>Id_Building_BL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id_Regola__c</fullName>
        <label>Id_Regola</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Scala_BL_WS__c</fullName>
        <label>Id_Scala_BL_WS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id_Scala_BL__c</fullName>
        <label>Id_Scala_BL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsBozza__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBozza</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInviato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInviato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsModifica__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsModifica</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lista_BlackList__c</fullName>
        <label>Lista_BlackList</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pop__c</fullName>
        <label>Pop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Riga__c</fullName>
        <label>Riga</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Servizio__c</fullName>
        <label>Servizio</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attivo</fullName>
                </value>
                <value>
                    <fullName>Passivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stato__c</fullName>
        <label>Stato</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhereCondition__c</fullName>
        <label>WhereCondition</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isAttiva__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAttiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBlacklist__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBlacklist</label>
        <type>Checkbox</type>
    </fields>
    <label>Regole Vendita</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Regole Vendita Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Regole Vendita</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>